# duperemove

./: .travis.yml  Makefile.am  README.autotools  README.md  configure.ac  duperemove.c  filerec.c  hashstats.c
debian/: changelog  control  copyright  docs  watch
debian/patches/: 0001-build.patch  0004-use-as-needed-and-add-latomic.patch  0005-Use-atomic-insetead-sync.patch  build.patch  series
